[package]
name = "reframe"
version = "0.3.3"
authors = ["robin <robin@ansvia.com>"]
edition = "2018"
description = "Reframe is Light, Fast & Simple project scaffolder tool."
homepage = "https://github.com/Ansvia/reframe"
repository = "https://github.com/Ansvia/reframe"
keywords = ["scaffolding", "scaffolder", "project", "generator"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
toml = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "5.0"
colored = "=1.7.0"
log = "0.4.6"
env_logger = "0.6.0"
regex = "1"
heck = "0.3.1"
reqwest = { version = "0.9", default-features = false, features = ["default-tls"] }
zip = { version = "0.5" }
lazy_static = "1.2"
chrono = "0.4"