[package]
name = "reframe"
version = "0.4.6"
authors = ["robin <r@ansvia.com>"]
edition = "2018"
description = "Light, Fast & Simple project scaffolder"
homepage = "https://github.com/Ansvia/reframe"
repository = "https://github.com/Ansvia/reframe"
keywords = ["scaffolding", "scaffolder", "project", "generator"]
readme = "README.md"
license = "Apache-2.0"
exclude = [
 "img",
 "*.orig", 
]
[dependencies]
toml = { version = "0.5.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "9"
colored = "2"
log = "0.4.6"
env_logger = "0.9.0"
regex = "1"
heck = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["default-tls"] }
zip = { version = "0.6" }
lazy_static = "1.2"
chrono = "0.4"
itertools = "0.10"
tokio = { version = "1.20", features=["rt-multi-thread", "macros"] }