[package]
name = "$name_snake_case$"
version = "0.1.0"
authors = ["$param.author_name$ <$param.author_email_lowercase$>"]
edition = "2018"

[dependencies]
log = "0.4.6"
# <% if param.with_serde %>
serde = { version = "$param.serde_version$", features = ["derive"] }
serde_json = "$param.serde_version$"
# <% endif %>
env_logger = "0.6.0"
